--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -15,11 +16,12 @@ header {
     background: #3739a7;
     height: 100px;
     display: flex;
-    align-items: center;
-    padding-left: 100px;
-    padding-right: 100px;
+    justify-content: space-around;
+    padding-left: 75px;
+    padding-right: 75px;
     position: sticky;
     top: 0;
+    
 }
 
 .container {
@@ -31,7 +33,7 @@ header {
 }
 
 .logo {
-    font-size: 40px;
+    font-size: 32px;
     font-weight: bold;
     color: #fff;
     text-decoration: none;
@@ -60,10 +62,21 @@ nav {
 
 .cta {
     background: #FFD700;
-    color: #121212;
+    color: #fff;
     padding: 10px 20px;
     border-radius: 5px;
     text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;
+}
+.cta-1 {
+    background: #FFD700;
+    color: #fff;
+    padding: 12px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 .menu-toggle {
@@ -83,7 +96,7 @@ nav {
     display: flex;
     align-items: center;
     height: 600px; /* Adjust as needed */
-    background: #2C1F4A;
+    
     color: #fff;
 }
 
@@ -102,6 +115,7 @@ nav {
 .hero-content h1 {
     font-size: 48px;
     margin-bottom: 50px;
+    
 }
 
 .hero-content p {
@@ -129,8 +143,38 @@ nav {
     header {
         height: 100px;
         padding: 0 10px;
+        justify-content: space-around;
     }
-
+  .cta {
+    background: #FFD700;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: bold;
+}
+  .cta-1 {
+    background: #FFD700;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: bold;
+}
+  
+  .logo {
+    font-size: 24px;
+    font-weight: bold;
+    color: #fff;
+    text-decoration: none;
+    font-family: 'Great Vibes', cursive;
+}
+.hero-content {
+    flex: 1;
+    padding: 20px;
+}
     .nav-links {
         display: none;
         flex-direction: column;
@@ -171,6 +215,11 @@ nav {
     .hero-image {
         margin-top: 20px;
     }
+    .hero-content h1 {
+    font-size: 32px;
+    margin-bottom: 50px;
+    padding-top: 50px;
+}
 }
 .about-me {
     display: flex;
@@ -178,8 +227,9 @@ nav {
     justify-content: center;
     text-align: left;
     padding: 40px 20px;
-    background-color: #2C1F4A;
+    
     border-radius: 8px;
+    flex-direction:column;
 }
 
 .profile-photo {
@@ -237,8 +287,11 @@ nav {
 
 /* Responsive Design */
 @media (max-width: 768px) {
-    .about-me {
+    .about-me .container {
         flex-direction: column;
+        display:flex;
+        text-align:center;
+        
     }
     .bio-skills {
         max-width: 100%;
@@ -246,15 +299,33 @@ nav {
     }
     .profile-photo {
         margin-bottom: 20px;
+        display:flex;
+        flex-direction:row;
+        
     }
     .profile-photo img {
-        border-radius: 0;
-        border: none;
+        border-radius: 50%;
+        border: 5px solid #FFD700;
+        max-width:200px;
+    }
+    .project {
+        background-color: #3739a7;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        overflow: hidden;
+        max-width: 420px;
+        width: 100%;
+        text-align: center;
     }
 }
-.portfolio {
+.portfolio{
     padding: 120px 20px;
     text-align: center;
+    display:flex;
+    
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
 }
 
 .portfolio h2 {
@@ -263,12 +334,13 @@ nav {
     color: #FFD700;
     padding-bottom: 80px;
 }
-
 .projects {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    gap: 20px;
+    
+    width:100%;
+    justify-content:space-around;
+    text-align:center;
+    gap: 30px;
 }
 
 .project {
@@ -276,9 +348,11 @@ nav {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     overflow: hidden;
-    max-width: 420px;
-    width: 100%;
+    max-width:360px;
     
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
     text-align: center;
 }
 
@@ -288,7 +362,7 @@ nav {
 }
 
 .project-info {
-    padding: 30px;
+    padding: 20px;
 }
 
 .project-info h3 {
@@ -300,12 +374,13 @@ nav {
 .project-info p {
     font-size: 1em;
     margin-bottom: 40px;
+    line-height: 1.5em;
 }
 
 .project-info .cta {
     text-decoration: none;
     background-color: #FFD700;
-    color: #121212;
+    color: #fff;
     padding: 10px 20px;
     border-radius: 4px;
     font-weight: bold;
@@ -397,26 +472,9 @@ nav {
     margin-bottom: 10px;
     font-size: 1.2em;
 }
-
-/* Responsive Design */
-@media (max-width: 768px) {
-    .services-list {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .process-overview {
-        text-align: center;
-    }
-
-    .process-overview ol {
-        padding-left: 0;
-    }
-}
 .testimonials {
     padding: 180px 20px;
     text-align: center;
-    background-color: #2C1F4A;
 }
 
 .testimonials h2 {
@@ -427,7 +485,7 @@ nav {
 
 .testimonials-list {
     display: flex;
-    flex-wrap: wrap;
+  
     justify-content: space-around;
     gap: 20px;
 }
@@ -443,6 +501,76 @@ nav {
     margin-bottom: 20px;
 }
 
+/* Responsive Design */
+@media (max-width: 768px) {
+    .services-list {
+        display:flex;
+       flex-direction:column;
+       justify-content:center;
+       
+       
+    }
+    .service {
+    background-color: #3739a7;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    max-width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    }
+    .services h2 {
+    font-size: 2.5em;
+    margin-bottom: 20px;
+    color: #FFD700;
+    display: flex;
+    max-width:100%;
+    flex-direction:row;
+    
+}
+
+    .process-overview {
+        text-align: center;
+        display: flex;
+        flex-direction:column;
+        justify-content:center;
+    }
+
+    .process-overview ol {
+        padding-left: 0;
+    }
+    .services .container{
+    padding: 40px 20px;
+    text-align: center;
+    justify-content: center;
+    align-items:center;
+    display: flex;
+    overflow:auto;
+    flex-direction:column;
+}
+
+.testimonials-list {
+    
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+.testimonial {
+    background-color: #3739a7;
+    border-radius: 8px;
+    padding: 20px;
+    flex-direction:column;
+   
+    max-width:80%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px;
+}
+
+}
+
+
 .testimonial p {
     font-size: 1.2em;
     line-height: 1.6;
@@ -451,7 +579,7 @@ nav {
 .blog-insights {
     padding: 160px 20px;
     text-align: center;
-    background-color: #2C1F4A;
+    
 }
 
 .blog-insights h2 {
@@ -551,7 +679,7 @@ nav {
 .contact {
     padding: 180px 20px;
     text-align: center;
-    background-color: #2C1F4A;
+   
     
     
 }
@@ -749,5 +877,21 @@ nav {
 
     .legal ul {
         padding-left: 0;
+        margin-bottom: 20px;
+    }
+
+    .legal ul li {
+        display: inline;
+        margin-right: 0px;
+    }
+    .legal{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        margin-bottom: 10px;
+    }
+    .legal p {
+        font-size: 1em;
+        margin-bottom: 20px;
     }
 }
