--- a/styles.css
+++ b/styles.css
@@ -226,7 +226,7 @@ nav {
     align-items: center;
     justify-content: center;
     text-align: left;
-    padding: 80px 20px;
+    padding: 40px 20px;
     
     border-radius: 8px;
     flex-direction:column;
@@ -695,10 +695,14 @@ nav {
     justify-content: center;
     gap: 50px;
     width: 100%;
+    flex-direction: row;
     align-items: center;
     text-align: center;
 }
-
+.contact-info form{
+    display: flex;
+    flex-direction: column;
+}
 .contact-details, .social-media {
     display: flex;
     justify-content: center;
@@ -734,7 +738,7 @@ nav {
 .contact-details p, .social-media ul {
     font-size: 1.4em;
     line-height: 1.6;
-    padding: 8px;
+    padding: 5px;
 }
 
 .contact-details a {
@@ -893,5 +897,107 @@ nav {
     .legal p {
         font-size: 1em;
         margin-bottom: 20px;
+    }
+}
+
+.contact-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.contact-info form {
+    margin-bottom: 20px;
+    background-color: #4c00ff;
+    padding: 30px;
+    width: 30%;
+}
+
+.contact-info label {
+    display: none;
+    margin: 10px 0 5px;
+    
+}
+
+.contact-info input,
+.contact-info textarea {
+    width: 100%;
+    
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #333;
+    border-radius: 5px;
+    background: #333; /* Dark input background */
+    color: #ffffff; /* Light input text */
+}
+
+.contact-info input:focus,
+.contact-info textarea:focus {
+    outline: none;
+    border-color: #6200ea; /* Purple border color on focus */
+}
+
+.contact-info button {
+    width: 100%;
+    padding: 10px;
+    background-color: #FFD700; /* Button background color */
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.contact-info button:hover {
+    background-color: #3700b3; /* Darker button color on hover */
+}
+
+
+
+
+
+.contact-details a {
+    color: #FFD700;
+    text-decoration: none;
+}
+
+.contact-details a:hover {
+    text-decoration: underline;
+}
+
+.contact-details .social ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: space-around;
+   
+}
+
+.contact-details .social ul li a {
+    color: #ffffff;
+    transition: color 0.3s;
+}
+
+.contact-details .social ul li a:hover {
+    color: #6200ea;
+}
+
+/* Responsive styles */
+@media (max-width: 600px) {
+    .contact .container {
+        padding: 15px;
+    }
+    
+    .contact h2 {
+        font-size: 1.5em;
+    }
+    
+    .contact-info input,
+    .contact-info textarea {
+        font-size: 1em;
+    }
+    
+    .contact-info button {
+        font-size: 1em;
     }
 }
